--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <header>
     <div class="header-top">
     <div class="header-img">
-<a href="https://www.youtube.com/channel/UCi2OAzpcNOhUmrr21YyqjiA"><img src="img/volion2.jpg" alt="" ></a>
+<a href="https://www.youtube.com/channel/UCi2OAzpcNOhUmrr21YyqjiA"><img src="https://github.com/kenshin3050/news/blob/main/volion2.jpg" alt="" ></a>
 </div>    
 <div class="anime">
     <span id="L">日大</span>
@@ -60,7 +60,7 @@
 </div>
 <div class="text">
 <div class="list-img">
-<img src="img/vo25.jpg" alt="">
+<img src="https://github.com/kenshin3050/news/blob/main/vo25.jpg" alt="">
 </div>
 <div class="list-text">
 <p>2022.03.22~2022.03.27まで、3泊6日の四国旅行に行きました。</p>
@@ -73,7 +73,7 @@
     </div>
     <div class="text">
     <div class="list-img">
-    <img src="img/vo30.jpg" alt="">
+    <img src="https://github.com/kenshin3050/news/blob/main/vo30.jpg" alt="">
     </div>
     <div class="list-text">
     <p>2021.03.26に15代目の三送会がありました。</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="text">
         <div class="list-img">
-        <img src="img/vo34.jpg" alt="">
+        <img src="https://github.com/kenshin3050/news/blob/main/vo34.jpg" alt="">
         </div>
         <div class="list-text">
         <p>2022.03.01日大二高卒業式。</p>
