--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 <img src="https://github.com/kenshin3050/news/blob/main/vo25.jpg?raw=true" alt="">
 </div>
 <div class="list-text">
-<p>2022.03.22~2022.03.27まで、3泊6日の四国旅行に行きました。</p>
+<p>2022.03.22~2022.03.27まで、3泊6日の四国旅行に行きました。一言で言えばめっちゃくっちゃ楽しかった旅行。二言で言えばめっちゃくっちゃ楽しかったが、楽したかった旅行。
+    理由は2つ。ひとつ。東京～四国まで車で、約10時間かけて行ったこと。走行距離はおよそ2000kmである。北海道の端から鹿児島の端までの距離である。ちなみにアサギマダラという蝶は2000km飛ぶそう。え？凄くね。
+    ふたつ。ハプニングが多すぎた。行きたかった場所が閉まっていたり、道が閉鎖して通れなかったり。コテージのトイレが詰まったり(？)
+    しかし、これらを全て愛せるほど楽しく、ひとつひとつ全てが思い出である。</p>
 </div>
 </div>
 </div>
