--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     <img src="https://github.com/kenshin3050/news/blob/main/vo30.jpg?raw=true" alt="">
     </div>
     <div class="list-text">
-    <p>2021.03.26に15代目の三送会がありました。</p>
+    <p>2021年春、私達は制服を脱いだ。卒業式、制服といえば第2ボタンである。なぜ第2ボタンを大切な人に譲るのか。諸説あるらしいので断言できないが、制服がブレザーである私達には関係が無い話だ。
+ところで、見て貰ったらわかる通り、私達の制服は良く目立つ。友人曰く、幕張メッセのイベントに制服で参加したときに「あ、○○高校だ」とぼやかれたらしい。良く目立つなこの制服、と思ったと同時に制服マニアがこの世界にいるんだ、とも思ったらしい。
+中高と6年間着てきたこの制服ともおさらばだ。ポケットに入っている生徒手帳と思い出は忘れずに了い、クリーニングに出そう。</p>
     </div>
     </div>
     </div>
