--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
 <h1>最新ニュース</h1>
 </div>
 <div class="lists">
+     <div class="list">
+        <div class="list-title">
+        クイズ作ってみた
+        </div>
+        <div class="text">
+        <div class="list-img">
+        <img src="img/vo-shunnki.png" alt="">
+        </div>
+        <div class="list-text">
+        <p>めっちゃクオリティの低いクイズ作ったので、やってみてくだせえ。良い問題が思いつかないので、いいの思いついたら私までご連絡をお願いします。クイズは、ホームページのタグから飛ぶか、以下に添付したURLから飛んでやってみてください。</p>
+        <a href="https://kenshin3050.github.io/quiz/">https://kenshin3050.github.io/quiz/</a>
+        </div>
+        </div>
+        </div>
 <div class="list">
 <div class="list-title">
 四国旅行
