--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 <h1>最新ニュース</h1>
 </div>
 <div class="lists">
+    <div class="list">
+        <div class="list-title">
+        坂本くん誕生日おめでとう!!
+        </div>
+        <div class="text">
+        <div class="list-img">
+        <img src="img/sakamotokunn.jpg" alt="">
+        </div>
+        <div class="list-text">
+        <p>坂本雄太くん誕生日おめでとう。ついに20歳ですね。そろそろハリーポッターと呪いの子のお返しが必要だな。定期的に髭をそってください。バレー部1サーブが不安定ですが見ていて面白いのでぜひそのままでいてください。自作PC作ったら壊しに行きますね。西澤、林、ホルトの分もやればよかったぜ。</p>
+        </div>
+        </div>
+        </div>
      <div class="list">
         <div class="list-title">
         クイズ作ってみた
