--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="text">
         <div class="list-img">
-        <img src="img/sakamotokunn.jpg" alt="">
+        <img src="https://github.com/kenshin3050/news/blob/main/sakamotokunn.jpg?raw=true" alt=""" alt="">
         </div>
         <div class="list-text">
         <p>坂本雄太くん誕生日おめでとう。ついに20歳ですね。そろそろハリーポッターと呪いの子のお返しが必要だな。定期的に髭をそってください。バレー部1サーブが不安定ですが見ていて面白いのでぜひそのままでいてください。自作PC作ったら壊しに行きますね。西澤、林、ホルトの分もやればよかったぜ。</p>
