--- a/index.html
+++ b/index.html
@@ -70,6 +70,50 @@
         <p>坂本雄太くん誕生日おめでとう。ついに20歳ですね。そろそろハリーポッターと呪いの子のお返しが必要だな。定期的に髭をそってください。バレー部1サーブが不安定ですが見ていて面白いのでぜひそのままでいてください。自作PC作ったら壊しに行きますね。西澤、林、ホルトの分もやればよかったぜ。</p>
         </div>
         </div>
+                              <div class="coments">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSdF7bdiESijMg7JmRqQYEQFLeWEWbzp_F0DjH21l8N2qSCklA/formResponse" target="hidden_iframe" method="post" onsubmit="return test(this.wcheck.value)">
+                <p class="name"><input name="entry.1851094109" placeholder="名前" value="名無し" required></p>
+                <p class="coment"><textarea name="entry.1839880237" placeholder="コメント" rows="10" cols="40" maxlength="400" id="wcheck" required></textarea></p>
+                <div class="submited">
+                <input type="submit" id="submitbutton" value="送信">
+            </div>
+                </form>
+                <iframe onload='if(submitted){window.location="";}' id=hidden_iframe name=hidden_iframe style=display:none></iframe>
+                
+                <script type="text/javascript">
+                var NGComments = ["死ね","バカ",".exe"]; // 簡易的なNGワードの設定
+                var regex = new RegExp(NGComments.join("|"));
+                function test(wcheck) {
+                    if (wcheck.match(regex) != null) {
+                        alert("ERROR: コメントにNGワードが含まれています");
+                        return false;
+                    }
+                    document.getElementById("submitbutton").disabled = true;
+                    textareas = document.getElementsByTagName('textarea');
+                    for(var i=0 ;i < textareas.length ;i ++ ){
+                        textareas[i].value = textareas[i].value.replace( /</g ,'&lt;' );
+                    }
+                    inputs = document.getElementsByTagName('input');
+                    for(var i=0 ;i < inputs.length ;i ++ ){
+                        inputs[i].value = inputs[i].value.replace( /</g ,'&lt;' );
+                    }
+                    return submitted=!0;
+                }
+                </script>
+            <div class="sheet">
+            <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+            <div id="comments"></div>
+            <script>
+            d3.csv("https://docs.google.com/spreadsheets/d/1GNwxrEO2OVQPnQgXL8a2r6MgebfyWTTwHFeJd9O_5hM/export?format=csv&range=A3:D", function(error, data){
+                var text = "";
+                for(var i=0; i<data.length; i++){
+                    text += i+1 + " 名前: <a href=\"mailto:" + data[i].Mail + "\">" + data[i].Name + "</a> " + data[i].Timestamp + "<pre>" + data[i].Comments + "</pre>";
+                }
+                d3.select("#comments").html(text);
+            });
+            </script>
+            </div>
+        </div>
         </div>
      <div class="list">
         <div class="list-title">
