--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <p>めっちゃクオリティの低いクイズ作ったので、やってみてくだせえ。良い問題が思いつかないので、いいの思いついたら私までご連絡をお願いします。クイズは、ホームページのタグから飛ぶか、以下に添付したURLから飛んでやってみてください。</p>
         <a href="https://kenshin3050.github.io/quiz/">https://kenshin3050.github.io/quiz/</a>
         </div>
-        </div
+         </div>
         </div>
 <div class="list">
 <div class="list-title">
