--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
 <h1>最新ニュース</h1>
 </div>
 <div class="lists">
+     <div class="list">
+        <div class="list-title">
+        
+            APEXクラブ開設しました
+        </div>
+        <div class="text">
+        <div class="list-img">
+        <img src="https://github.com/kenshin3050/news/blob/main/.jpg?raw=true" alt=""" alt="">
+        </div>
+        <div class="list-text">
+        <p>speed_king2002(左),Shuuuuuuu_nki(真ん中),kenshin3050(右)の三人で構成されているクラブ。一人ブロンズのパスファインダー使いがいますが、最強ですのでご安心ください（稀に戦犯を犯しますが）。speed_king2002はパスファインダー、Shuuuuuuu_nkiはヴァルキリー、kenshin3050はホライゾンを使うことがほとんどです。挑戦者お待ちしております。クラブの名前は、「DASA」です。</p>
+        </div>
+        </div>
+        </div>
     <div class="list">
         <div class="list-title">
         坂本くん誕生日おめでとう!!
