--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <a href="https://kenshin3050.github.io/volleyball/" class="btn btn-border">トップ</a>
         <a href="https://kenshin3050.github.io/news/" class="btn btn-border">ニュース</a>
         <a href="https://kenshin3050.github.io/player/">チーム・選手</a>
-        <a href="https://kenshin3050.github.io/quiz/" class="btn btn-border">クイズ</a>
         <a href="https://www.google.com/maps/place/%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E7%AC%AC%E4%BA%8C%E4%B8%AD%E5%AD%A6%E6%A0%A1%E3%83%BB%E9%AB%98%E7%AD%89%E5%AD%A6%E6%A0%A1/@35.7104675,139.6260606,17z/data=!3m1!4b1!4m5!3m4!1s0x6018edf33dc34fd5:0x4acad03316920595!8m2!3d35.7104632!4d139.6282493?hl=ja" class="btn btn-border">交通アクセス</a>
     </div>
 </header>
@@ -57,20 +56,6 @@
 <h1>最新ニュース</h1>
 </div>
 <div class="lists">
-     <div class="list">
-        <div class="list-title">
-        
-            APEXクラブ開設しました
-        </div>
-        <div class="text">
-        <div class="list-img">
-        <img src="https://github.com/kenshin3050/news/blob/main/dasa.jpg?raw=true" alt=""" alt="">
-        </div>
-        <div class="list-text">
-        <p>speed_king2002(左),Shuuuuuuu_nki(真ん中),kenshin3050(右)の三人で構成されているクラブ。一人ブロンズのパスファインダー使いがいますが、最強ですのでご安心ください（稀に戦犯を犯しますが）。speed_king2002はパスファインダー、Shuuuuuuu_nkiはヴァルキリー、kenshin3050はホライゾンを使うことがほとんどです。挑戦者お待ちしております。クラブの名前は、「DASA」です。</p>
-        </div>
-        </div>
-        </div>
     <div class="list">
         <div class="list-title">
         坂本くん誕生日おめでとう!!
@@ -81,7 +66,7 @@
         </div>
         <div class="list-text">
         <p>2022.05.28</p>
-        <p>坂本雄太くん誕生日おめでとう。ついに20歳ですね。そろそろハリーポッターと呪いの子のお返しが必要だな。定期的に髭をそってください。バレー部1サーブが不安定ですが見ていて面白いのでぜひそのままでいてください。自作PC作ったら壊しに行きますね。西澤、林、ホルトの分もやればよかったぜ。</p>
+        <p>坂本雄太くん誕生日おめでとう。ついに20歳ですね。</p>
         </div>
         </div>
                               <div class="coments">
@@ -128,20 +113,6 @@
             </script>
             </div>
         </div>
-        </div>
-     <div class="list">
-        <div class="list-title">
-        クイズ作ってみた
-        </div>
-        <div class="text">
-        <div class="list-img">
-        <img src="https://github.com/kenshin3050/news/blob/main/vo-shunnki.png?raw=true" alt="">
-        </div>
-        <div class="list-text">
-        <p>めっちゃクオリティの低いクイズ作ったので、やってみてくだせえ。良い問題が思いつかないので、いいの思いついたら私までご連絡をお願いします。クイズは、ホームページのタグから飛ぶか、以下に添付したURLから飛んでやってみてください。</p>
-        <a href="https://kenshin3050.github.io/quiz/">https://kenshin3050.github.io/quiz/</a>
-        </div>
-         </div>
         </div>
 <div class="list">
 <div class="list-title">
